<resources>
    <string name="app_name">SmartHome</string>
    <string name="nav_item_actions">Actions</string>
    <string name="nav_item_tasks">Tasks</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_about">About</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove </string>
    <string name="do_yo_want_to_remove">Do you want to remove?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="port_existed">Port is already exist!</string>
    <string name="name_can_not_be_empty">Name can not be empty!</string>
    <string name="port_can_not_be_empty">Port can not be empty!</string>
    <string name="add_button">Add Button</string>
    <string name="add_seek_bar">Add SeekBar</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="settings_server">Settings Server</string>
    <string name="url_server">Url server</string>
    <string name="name_module">Name module</string>
    <string name="password">Password</string>
    <string name="settings_app">Settings app</string>
    <string name="width_views">Width views</string>
    <string name="dp">Dp…</string>
    <string name="vibration_on_press">Vibration on press</string>
    <string name="height_views">Height views</string>
    <string name="apply">Apply</string>
    <string name="sensor_removed">Sensor removed!</string>
    <string name="action_removed">Action removed!</string>
    <string name="name">Name</string>
    <string name="port">Port</string>
    <string name="about">Program SmartHome By Yurii Alieksieiev &amp; Oleg Horbatuk</string>
    <string name="bottom_text">Yurii Alieksieiev 2018</string>
    <string name="no_connection">Not connection!</string>
    <string name="retry">Retry</string>
    <string name="logo">logo</string>
    <string name="see_think_act">See.Think.Act</string>
    <string name="smart_home">SmartHome</string>
    <string name="description">Desctiption</string>
    <string name="every">every</string>
    <string name="port_empty">Can not be empty!</string>
    <string name="port_exist">Port is exist here!</string>
    <string name="signal_empty">Signal can not be empty!</string>
    <string name="signal_hint">Signal: only 0..255</string>
    <string name="device">Device</string>
    <string name="type_port">Type port</string>
    <string name="port_status">Port status</string>
    <string name="signal">Signal</string>
    <string name="icon">Icon</string>
    <string name="type_task">Type Task</string>
    <string name="mode">Mode</string>
    <string name="status">Status</string>
    <string name="job">Job</string>
    <string name="save">save</string>
    <string name="once">once</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="error_connection">Error connection</string>
    <string name="removed_successful">Removed successful</string>
    <string name="error_json">Error with JSON!</string>
    <string name="pin_name">Pin name</string>
    <string name="error_its_analog">It\'s analog!</string>
    <string name="port_is_analog">Port is analog!</string>
    <string name="registered_pins">Registered Pins</string>
    <string name="pin">Pin</string>
    <string name="create_new_action">Create new Action</string>
    <string name="error_its_digital">It\'s digital pin!</string>
</resources>
