<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group_control"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_actions"
            android:icon="@drawable/ic_actions"
            android:title="@string/nav_item_actions" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_tasks"
            android:title="@string/nav_item_tasks" />
    </group>

    <group
        android:id="@+id/group_other"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_item_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_item_about" />
    </group>
</menu>