<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/port"
            android:inputType="number"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/tv_error_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_error"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/device"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/sp_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/type_port"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/sp_type_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ln_tool_digital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/port_status"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/sp_port_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tool_analog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_port_signal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:hint="@string/signal"
            tools:ignore="Autofill" />
        <TextView
            android:id="@+id/tv_error_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_error"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:textColor="@android:color/holo_red_light" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"/>

</LinearLayout>