<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:apps="http://schemas.android.com/tools"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="#F1EDED"
    android:layout_marginBottom="4dp"
    android:elevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">
        <TextView
            android:id="@+id/tv_hint_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            apps:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_hint_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            apps:ignore="RelativeOverlap"
            android:layout_toStartOf="@id/tv_hint_type_port"
            android:layout_marginEnd="50dp"
            />
        <TextView
            android:id="@+id/tv_pin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            apps:text="terst"
            android:textSize="16sp"
            android:layout_marginTop="-5sp"
            android:layout_alignStart="@id/tv_hint_pin"
            android:layout_below="@id/tv_hint_pin"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_hint_type_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/type_port"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:paddingEnd="30dp"
            android:textStyle="italic"
            apps:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/tv_type_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hint_type_port"
            android:textColor="@android:color/holo_orange_dark"
            apps:text="analog"
            android:layout_alignStart="@id/tv_hint_type_port" />


        <TextView
            android:id="@+id/tv_hint_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_type_port"
            android:layout_alignStart="@id/tv_type_port"
            android:layout_alignTop="@id/tv_description"
            android:layout_marginTop="-16dp"
            android:text="@string/device"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/tv_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hint_device"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_alignStart="@id/tv_hint_type_port"
            apps:text="TCOD" />
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            apps:text="tesfwefwefwefwefwefwft_one"
            android:textSize="16sp"
            android:layout_marginTop="-5dp"
            android:layout_below="@id/tv_hint_name"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/tv_hint_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_below="@id/tv_name"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hint_description"
            apps:text="This is description of taskrfes"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>